fix: !improve adjustment

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@steveyuowo/vue-hot-toast": "^1.2.1",
     "animate.css": "^4.1.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
